# tir

./: .gitignore  Cargo.toml
migrations/2022-03-27-022925_create_posts/: up.sql
src/: db.rs  main.rs  models.rs  schema.rs  verify.rs
src/services/: create_post.rs  delete_post.rs  files.rs  index.rs  mod.rs  post.rs
static/css/: simple.css
templates/: index.html.hbs  post.html.hbs
