[package]
name = "tir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.9.1"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["handlebars"] }
serde = "1.0.136"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
chrono = "0.4.19"
openssl = "0.10.38"
base64 = "0.13.0"